gitops/manifests/mealie/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
      app.kubernetes.io/name: mealie
  template:
    metadata:
      labels:
        app: mealie
        app.kubernetes.io/name: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.21.0
          ports:
            - containerPort: 9000
          resources:
            limits:
              memory: "1000Mi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie-internal
  namespace: mealie
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mealie.local.timmybtech.com`)
      kind: Rule
      services:
        - name: mealie
          port: 9000
  tls:
    secretName: local-timmybtech-com-tls
